--- a/templates/drug_history.html
+++ b/templates/drug_history.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %}
+d{% extends 'layout.html' %}
 {% block navbar%}
 <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
@@ -32,25 +32,27 @@
 	    <div class="page-header">
 		    <h1>History comparison tool</h1>
 	    </div>
-	    <form method="GET" action="/history/">
-	    	<div class="form-row">
-		    	<div class="form-group col-md-4">
-			    	<label for="search_term">Drug Categories:</label>
-			    	<input class="form-control" name="search_term" type="text" value="" placeholder="e.g. ibuprofen; naproxen">
-			    </div>
-			    <div class="form-group col-md-3">
-			    	<label for="year">Drug Names</label>
-			    	<select name="year" class="form-control">
-            {% for m in dataframe.name %}
-					  <option value=med>med</option>
-            {% endfor %}
-					</select>
-				</div>
-			</div>
+	    <form method="GET" action="/drug_history?">
+         <select class="selectpicker" multiple col-md-6 name='drugs'>
+          <option value="" disabled selected>Choose your Drugz</option>
+          {% for m in drug_names %}
+          <option> {{ m }}</option>
+          {% endfor %}
+          </select>
+
+          <!-- value=med> -->
+
 			<div class="form-group row">
-    			<div class="col-sm-10">
-				<button class="btn btn-primary" type="submit">Search</button>
-			</div></div>
+    	<div class="col-sm-10">
+      <br>
+      <button class="btn btn-primary" type="submit" id="display">Display Results</button> 
+      <h1> Drugs</h1>
+      <h2> {{ drug_dataframe | safe}} </h2>
+      <form action="/drug_history?">
+      
+      </div></div>
+      </form>
+		  </div></div>
 	    </form>
 
 
