--- a/templates/drug_history.html
+++ b/templates/drug_history.html
@@ -46,18 +46,10 @@ d{% extends 'layout.html' %}
     	<div class="col-sm-10">
       <br>
       <button class="btn btn-primary" type="submit" id="display">Display Results</button> 
-   <!--    <form method="get" action="drug_history.csv">
-      <button type="submit">Download!</button>
-      </form> -->
-      <a href="drug_history.csv" download> Download</a>
- 
       <h1> Drugs</h1>
-      <!-- <h2> {{ drug_dataframe | safe}} </h2> -->
-      <table class="table table-hover table-dark", columns=12 id='drugTable'> {{ drug_dataframe | safe}} </table>
+      <h2> {{ drug_dataframe | safe}} </h2>
       <form action="/drug_history?">
-
-    
-
+      
       </div></div>
       </form>
 		  </div></div>
@@ -65,4 +57,3 @@ d{% extends 'layout.html' %}
 
 
 {% endblock %}
-
